# vectorium

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  TODO.md
benches/: dense_dot_product.rs
scripts/: convert_dense_hd5_to_npy.py  recall.py
src/: datasets.rs  distances.rs  lib.rs  num_marker.rs  packed_vector.rs  quantizers.rs  readers.rs  space_usage.rs  utils.rs  vector1D.rs  vector1d.rs
src/clustering/: kmeans.rs  mod.rs
src/core/: dataset.rs  distances.rs  index.rs  mod.rs  packed_vector.rs  rerank_index.rs  storage.rs  vector.rs  vector1d.rs  vector_encoder.rs
src/datasets/: dense_dataset.rs  dense_dataset_scalar.rs  mod.rs  multivec_dataset.rs  packed_dataset.rs  readers.rs  sparse_dataset.rs  sparse_dataset_scalar.rs
src/encoders/: dense_scalar.rs  dotvbyte_fixedu8.rs  mod.rs  multivec_pq.rs  multivec_scalar.rs  multivec_two_level_pq.rs  pq.rs  sparse_scalar.rs
src/encoders/dotvbyte_fixedu8/: swizzle.rs
src/encoders/pq/: simd_distances.rs
src/quantizers/: dense_plain.rs  dense_scalar.rs  dotvbyte_fixedu8.rs  plain.rs  sparse_scalar.rs
src/utils/: mod.rs  numeric_markers.rs  space_usage.rs  utils.rs
