[package]
name = "vectorium"
version = "0.1.0"
edition = "2024"
authors = [
    "Rossano Venturini <rossano.venturini@unipi.it>"]
readme = "README.md"

[dependencies]
indicatif = {version = "0.17.11", features = ["rayon"]}
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
rayon = "1.11"
# TODO: f16 available in nightly, but not supported by crates: https://github.com/rust-num/num-traits/pull/333
half = { version = "2.6", features = [
    "bytemuck",
    "serde",
    "std",
    "num-traits",
] }
ndarray = "0.16"
ndarray-npy = "0.9"
# TODO: use upstream when https://gitlab.com/tspiteri/fixed/-/issues/69 is fixed
# If it's not getting fixed, prefer using a git patch when https://github.com/rust-lang/cargo/issues/4648 is fixed
fixed = { git = "https://gitlab.com/tinozzo123/fixed", branch = "fast_to_f32_hack", features = [
    "num-traits",
    "serde",
] }
num-traits = "0.2.19"
itertools = "0.14.0"
bytemuck = { version = "1.23", features = [
    "min_const_generics",
    "nightly_portable_simd",
] }
rusty-perm = "0.2.0"
rgb = { git = "https://github.com/JMMackenzie/enhanced-graph-bisection.git" } 
rand = "0.8"

[profile.release]
opt-level = 3
debug = true
lto = true
